<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPhone">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_close_black2_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="298dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="57dp"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_verification_code"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="328dp"
        android:layout_height="168dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/text_view_bg"
            android:fontFamily="@font/poppins_semibold"
            android:padding="12dp"
            android:text="@string/txt_postalCode"
            android:textAlignment="center"
            android:textColor="@color/colorTextView" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="229dp"
            android:layout_height="46dp"
            android:layout_marginStart="82dp"
            android:layout_marginTop="22dp"
            android:autofillHints=""
            android:background="@drawable/text_view_bg"
            android:ems="10"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="textPersonName"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/edt_phone"
            android:textColor="@color/colorTextView"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button6"
            android:layout_width="292dp"
            android:layout_height="46dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_submit"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/btn_submit"
            android:textAllCaps="false"
            android:textColor="@color/colorSecundary"
            android:textSize="14sp"
            android:textStyle="normal" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_enter_code"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_code"
        android:textColor="@color/colorCode"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="138dp"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_not_receive_code"
        android:textColor="@color/colorTextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_re_send"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="149dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_get_call"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
</android.support.constraint.ConstraintLayout>