<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_bola_mayor">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="440dp"
        android:layout_height="440dp"
        android:layout_marginBottom="456dp"
        app:cardBackgroundColor="@color/color_circle"
        app:cardCornerRadius="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_medico"
            android:textAlignment="center"
            android:textColor="@color/colorLogo"
            android:textSize="36sp" />
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/button2"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/boton_redes"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_celular"
        android:textColor="@color/color_celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/boton_redes"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_fb"
        android:textColor="@color/color_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/boton_redes"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_gog"
        android:textColor="@color/color_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/poppins"
        android:shadowColor="@color/color_letra_termi"
        android:text="@string/txt_terminos"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="52dp"
        app:cardBackgroundColor="@color/color_circle"
        app:cardCornerRadius="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</android.support.constraint.ConstraintLayout>