<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="410dp"
        android:layout_height="437dp"
        android:layout_marginBottom="335dp"
        android:background="@drawable/card_view_bg"
        app:cardBackgroundColor="#6E78F7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="190dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_medico"
            android:textAlignment="center"
            android:textColor="@color/colorLogo"
            android:textSize="36sp" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/boton_redes"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_celular"
        android:textColor="@color/color_celular"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/boton_redes"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_fb"
        android:textColor="@color/color_facebook"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="98dp"
        android:background="@drawable/boton_redes"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_gog"
        android:textColor="@color/color_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="236dp"
        android:layout_height="15dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="@font/poppins"
        android:shadowColor="@color/color_letra_termi"
        android:text="@string/txt_terminos"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="348dp"
        android:layout_marginTop="736dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

</android.support.constraint.ConstraintLayout>