<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPhone">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="101dp"
        android:layout_height="73dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/verification"
        android:contentDescription="@android:string/unknownName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_close_black2_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="298dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="57dp"
        android:fontFamily="@font/poppins"
        android:text="@string/txt_enterPhone"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <android.support.v7.widget.CardView
        android:layout_width="328dp"
        android:layout_height="168dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/text_view_bg"
            android:fontFamily="@font/poppins_semibold"
            android:padding="12dp"
            android:text="@string/txt_postalCode"
            android:textAlignment="center"
            android:textColor="@color/colorTextView" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="229dp"
            android:layout_height="46dp"
            android:layout_marginStart="82dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/text_view_bg"
            android:ems="10"
            android:fontFamily="@font/poppins_semibold"
            android:inputType="textPersonName"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/edt_phone"
            android:textColor="@color/colorTextView"
            android:autofillHints="" tools:targetApi="o" />

        <Button
            android:id="@+id/button6"
            android:layout_width="292dp"
            android:layout_height="46dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_submit"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/btn_submit"
            android:textAllCaps="false"
            android:textColor="@color/colorSecundary"
            android:textSize="14sp"
            android:textStyle="normal" />
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>