<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".libro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="239dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="428dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sasa" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="356dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_cita1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="312dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/txt_cita2"
        android:textAlignment="center"
        android:textColor="@color/color_letr_lig"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="684dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="98dp"
        android:background="@drawable/botonmoradito"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/bt1"
        android:textColor="@color/colorbt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>